--- a/cnu-JS30-smalltasks/JS30_15_Style.css
+++ b/cnu-JS30-smalltasks/JS30_15_Style.css
@@ -71,6 +71,7 @@ h2 {
 
 .plates input {
   display: none;
+  color: black;
 }
 
 .plates input + label:before {
@@ -92,9 +93,31 @@ h2 {
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
+.add-items input:hover {
+  background-color: rgb(245, 245, 245);
+  box-shadow: inset 0 0 0.125rem 0.125rem #ccc;
+  text-shadow: 0 0 1px #888;
+}
+
 .item-delete-btn {
   border-radius: 0;
   border: 1px solid #ccc;
   background-color: #efefef;
   padding: 10px;
+}
+
+.item-delete-btn:hover {
+  background-color: rgb(245, 245, 245);
+  box-shadow: inset 0 0 0.125rem 0.125rem #ccc;
+  text-shadow: 0 0 1px #888;
+}
+
+#add-item-txt {
+  color: -internal-light-dark(black, black);
+}
+
+#add-item-txt:hover {
+  background-color: #fff;
+  box-shadow: inset 0 0 0.125rem 0.125rem #ccc;
+  color: -internal-light-dark(black, black);
 }
